--- a/style.css
+++ b/style.css
@@ -27,11 +27,13 @@ body{
     border-right: 1px solid rgba(0, 0, 0, 0.02);
     overflow-y: scroll;
     overflow-x: hidden;
+    
 }
 .container .box-right{
     position: relative;
     flex: 70%;
     background-color: #e5ddd5;
+    
    
 }
 .container .box-right::before{
@@ -41,7 +43,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(./images/fundoWhatsapp.jpg);
+    background: url('./img/fundoWhatsapp.jpg');
     opacity: 0.3;
 }
 .header{
@@ -134,6 +136,10 @@ body{
     border-radius: 50%;
     margin-right: 10px;
 }
+.imageReform{
+    width: 60px;
+    height: 60px;
+}
 
 .chatlist .block .details{
     position: relative;
@@ -143,7 +149,7 @@ body{
 
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5px;
+    
 }
 .chatlist .block .details .listhead h4{
     font-size: 1.1em;
@@ -233,8 +239,11 @@ color: #06d755;
     opacity: 0.3;
 }
 .message .group{
-    background-color: #ebebeb;
+    background-color: #fff;
     color: #555;
+}
+.message .group:hover{
+    background-color: #ededed;
 }
 .you-message{
     justify-content: flex-end;
@@ -253,7 +262,7 @@ color: #06d755;
     left: -12px;
     width: 20px;
     height: 20px;
-    background: linear-gradient(225deg, #fff 0%, #fff 50%, transparent50);
+    background: linear-gradient(225deg, #fff 0%, #fff 50%, transparent 50);
 
 
 }
@@ -285,4 +294,17 @@ color: #06d755;
     outline: none;
     border-radius: 30px;
     font-size: 1em;
+}
+@media screen and (max-width: 700px){
+    .container .box-left{
+        
+        flex: 100%;
+        
+    }
+
+    .container .box-right{
+        display: none;
+        
+       
+    }
 }
